--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ Description: Generic methods for facilitating running R-ECA
 License: LGPL
 Encoding: UTF-8
 LazyData: true
+Depends: R (>= 2.10)
 Imports: data.table, readr
 Suggests: 
     testthat
