--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,5 +13,8 @@ LazyData: true
 Depends: R (>= 2.10)
 Imports: data.table, readr, ggplot2, gridExtra, utils, Reca
 Suggests: 
-    testthat
+    testthat,
+    knitr,
+    rmarkdown
 RoxygenNote: 6.1.1
+VignetteBuilder: knitr
